--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@koa/router": "^12.0.0",
-    "chatgpt": "^4.3.2",
+    "chatgpt": "5.0.8",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "log4js": "^6.7.1",
