--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wechat_offiaccount",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "src/index.js",
   "type": "module",
   "license": "MIT",
@@ -12,22 +12,24 @@
     "@commitlint/config-conventional": "^17.4.2",
     "eslint": "^8.33.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.1"
+    "lint-staged": "^13.1.1",
+    "nodemon": "^2.0.21"
   },
   "scripts": {
     "token": "node scripts/token",
     "prepare": "husky install",
-    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs --fix"
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs --fix",
+    "dev": "nodemon src/index.js"
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
     "@koa/router": "^12.0.0",
-    "chatgpt": "5.0.8",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "log4js": "^6.7.1",
+    "openai": "^3.2.1",
     "xml2js": "^0.4.23"
   }
 }
